force-app/main/default/objects/cgcloud__RTR_Report_Configuration__c/cgcloud__RTR_Report_Configuration__c.object-meta.xml
<CustomObject>
    <label>RTR Report Configuration</label>
    <nameField>
        <displayFormat>RC-{0000000}</displayFormat>
        <label>RTR Report Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RTR Report Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>