force-app/main/default/objects/cgcloud__RTR_Report_Configuration__c/fields/cgcloud__Disable_AutoSync__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Disable_AutoSync__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set this value to true to disable automatic synchronization to off platform. This value will be set to false after the refresh is completed.</description>
    <inlineHelpText>Set this value to true to disable automatic synchronization to off platform. This value will be set to false after the refresh is completed.</inlineHelpText>
    <label>Disable AutoSync</label>
    <type>Checkbox</type>
</CustomField>