force-app/main/default/objects/cgcloud__RTR_Report_Configuration__c/fields/cgcloud__Internal_Name__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Internal_Name__c</fullName>
    <label>Internal Name</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>