force-app/main/default/objects/cgcloud__RTR_Report_Configuration__c/fields/cgcloud__JSON__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__JSON__c</fullName>
    <label>JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>