force-app/main/default/objects/cgcloud__RTR_Report_Configuration__c/fields/cgcloud__Reporting_KPI_Set__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Reporting_KPI_Set__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Base Reporting KPI Set to use on calculations.</inlineHelpText>
    <label>Reporting KPI Set</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>cgcloud__KPI_Set__c.cgcloud__Usage__c</field>
            <operation>equals</operation>
            <value>Reporting</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>cgcloud__KPI_Set__c</referenceTo>
    <relationshipLabel>RTR Report Configurations</relationshipLabel>
    <relationshipName>RTR_Report_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>