force-app/main/default/objects/cgcloud__RTR_Report_Configuration__c/fields/cgcloud__Sales_Organization__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sales_Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Organization</label>
    <referenceTo>cgcloud__Sales_Organization__c</referenceTo>
    <relationshipLabel>RTR Report Configurations</relationshipLabel>
    <relationshipName>RTR_Report_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>