force-app/main/default/objects/cgcloud__RTR_Report_Configuration__c/fields/cgcloud__Usage__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Usage__c</fullName>
    <label>Usage</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>reportmeta</fullName>
                <default>true</default>
                <label>Report Metadata</label>
            </value>
            <value>
                <fullName>integrationmeta</fullName>
                <label>Integration Metadata</label>
            </value>
            <value>
                <fullName>productdim</fullName>
                <label>Report Product Dimension</label>
            </value>
            <value>
                <fullName>promotiondim</fullName>
                <label>Report Promotion Dimension</label>
            </value>
            <value>
                <fullName>tacticdim</fullName>
                <label>Report Tactic Dimension</label>
            </value>
            <value>
                <fullName>paymentdim</fullName>
                <label>Report Payment Dimension</label>
            </value>
            <value>
                <fullName>tacticprodcondattrmeta</fullName>
                <label>Report Tactic Product Condition Attribute Metadata</label>
            </value>
            <value>
                <fullName>intaccountdim</fullName>
                <label>Integration Account Dimension</label>
            </value>
            <value>
                <fullName>intproductdim</fullName>
                <label>Integration Product Dimension</label>
            </value>
            <value>
                <fullName>intpromotiondim</fullName>
                <label>Integration Promotion Dimension</label>
            </value>
            <value>
                <fullName>inttacticdim</fullName>
                <label>Integration Tactic Dimension</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>