force-app/main/default/objects/cgcloud__RTR_Report_Configuration__c/validationRules/cgcloud__Check_Internal_Name_Pattern.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Check_Internal_Name_Pattern</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(cgcloud__Internal_Name__c,&quot;^[A-Za-z 0-9]+$&quot;))</errorConditionFormula>
    <errorDisplayField>cgcloud__Internal_Name__c</errorDisplayField>
    <errorMessage>Internal Name should not contain special characters.</errorMessage>
</ValidationRule>