force-app/main/default/objects/cgcloud__RTR_Report_Configuration__c/validationRules/cgcloud__Mandatory_Reporting_KPI_Set.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Mandatory_Reporting_KPI_Set</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
                OR(
                    ISPICKVAL(cgcloud__Usage__c, &apos;reportmeta&apos;), 
                    ISPICKVAL(cgcloud__Usage__c, &apos;integrationmeta&apos;),
                    ISPICKVAL(cgcloud__Usage__c, &apos;copilotpromotionreportmeta&apos;),
                    ISPICKVAL(cgcloud__Usage__c, &apos;copilotaccountreportmeta&apos;)
                ), 
                ISBLANK(cgcloud__Reporting_KPI_Set__c)
        )</errorConditionFormula>
    <errorDisplayField>cgcloud__Reporting_KPI_Set__c</errorDisplayField>
    <errorMessage>Reporting KPI Set cannot be empty, for the selected usage!</errorMessage>
</ValidationRule>