force-app/main/default/objects/cgcloud__RTR_Report_Configuration__c/validationRules/cgcloud__Mandatory_Sales_Org.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Mandatory_Sales_Org</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(cgcloud__Sales_Organization__c)</errorConditionFormula>
    <errorDisplayField>cgcloud__Sales_Organization__c</errorDisplayField>
    <errorMessage>Sales Organization cannot be empty</errorMessage>
</ValidationRule>