force-app/main/default/objects/cgcloud__RTR_Report_Configuration__c/listViews/cgcloud__All.listView-meta.xml
<ListView>
    <fullName>cgcloud__All</fullName>
    <columns>NAME</columns>
    <columns>cgcloud__Internal_Name__c</columns>
    <columns>cgcloud__Usage__c</columns>
    <columns>cgcloud__Sales_Organization__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>